till mail sender

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 PORT=8080
 mongoURL=`mongodb+srv://sohel:nopass@cluster0.4rmgup6.mongodb.net/MERN_ECOM?retryWrites=true&w=majority`
-jwtSecret="secret"
+jwt_secret="secret"
+
+SMPT_SERVICE= "gmail"
+SMPT_MAIL="onestop1up@gmail.com"
+SMPT_PASSWORD ="hdewywbdccjiqnas"
