--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.4",
-    "nodemon": "^3.0.2"
+    "nodemailer": "^6.9.8",
+    "nodemon": "^3.0.2",
+    "validator": "^13.11.0"
   }
 }
