--- a/frontendreact/package.json
+++ b/frontendreact/package.json
@@ -22,7 +22,10 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slideshow-image": "^4.3.0",
     "react-spinners": "^0.13.8",
+    "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
