--- a/frontendreact/package.json
+++ b/frontendreact/package.json
@@ -20,9 +20,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.30.1",
     "react-slideshow-image": "^4.3.0",
     "react-spinners": "^0.13.8",
     "react-type-animation": "^3.2.0",
