--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,5 +58,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://192.168.1.36:8080"
+  "proxy": "http://192.168.1.36:8080",
+  "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "babel-loader": "^9.1.3",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
