--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,7 @@ jwt_secret="secret"
 SMPT_SERVICE= "gmail"
 SMPT_MAIL="onestop1up@gmail.com"
 SMPT_PASSWORD ="hdewywbdccjiqnas"
+
+cloud_name="dljjbknh2"
+api_key= "646616535618867"
+api_secret="ZuZ2JUjEXIRNHGVRSUPs0tefLpw"
